@@ -45,8 +45,7 @@ texmf_other_scripts = \
 	tetex/texdoctk.pl \
 	texdoc/texdoc.tlu \
 	texlive/rungs.tlu \
-	texlive/tlmgr.pl \
-	texlive/updmap.pl
+	texlive/tlmgr.pl
 nobase_dist_texmf_scripts_SCRIPTS = \
 	$(texmf_shell_scripts) \
 	$(texmf_other_scripts)
